--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "wdio-devtools-service": "^5.0.0-beta.2",
     "wdio-local-runner": "^5.0.0-beta.2",
     "wdio-mocha-framework": "^5.0.0-beta.2",
+    "wdio-selenium-standalone-service": "^5.0.0-beta.2",
     "wdio-spec-reporter": "^5.0.0-beta.2",
     "wdio-sync": "^5.0.0-beta.2",
     "webdriverio": "^5.0.0-beta.2"
