--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
-    "wdio-cli": "^5.0.0-beta.2",
-    "wdio-devtools-service": "^5.0.0-beta.2",
-    "wdio-local-runner": "^5.0.0-beta.2",
-    "wdio-mocha-framework": "^5.0.0-beta.2",
-    "wdio-selenium-standalone-service": "^5.0.0-beta.2",
-    "wdio-spec-reporter": "^5.0.0-beta.2",
-    "wdio-sync": "^5.0.0-beta.2",
-    "webdriverio": "^5.0.0-beta.2"
+    "@wdio/cli": "^5.0.0-beta.10",
+    "@wdio/devtools-service": "^5.0.0-beta.10",
+    "@wdio/local-runner": "^5.0.0-beta.10",
+    "@wdio/mocha-framework": "^5.0.0-beta.10",
+    "@wdio/selenium-standalone-service": "^5.0.0-beta.10",
+    "@wdio/spec-reporter": "^5.0.0-beta.10",
+    "@wdio/sync": "^5.0.0-beta.10",
+    "webdriverio": "^5.0.0-beta.10"
   }
 }
