--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/christian-bromann/webdriverio-performance-testing#readme",
   "dependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/register": "^7.0.0",
-    "@wdio/cli": "^5.9.1",
-    "@wdio/devtools-service": "^5.9.0",
-    "@wdio/local-runner": "^5.9.1",
-    "@wdio/mocha-framework": "^5.9.1",
-    "@wdio/spec-reporter": "^5.8.0",
-    "@wdio/sync": "^5.9.1",
-    "chai": "^4.1.2",
-    "chromedriver": "latest",
-    "wdio-chromedriver-service": "^5.0.1",
-    "webdriverio": "^5.9.1"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
+    "@wdio/cli": "^6.1.12",
+    "@wdio/devtools-service": "^6.1.11",
+    "@wdio/local-runner": "^6.1.12",
+    "@wdio/mocha-framework": "^6.1.8",
+    "@wdio/spec-reporter": "^6.1.12",
+    "@wdio/sync": "^6.1.8",
+    "chai": "^4.2.0",
+    "chromedriver": "^83.0.0",
+    "wdio-chromedriver-service": "^6.0.3",
+    "webdriverio": "^6.1.12"
   }
 }
